[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/ui_elements/slider/LabeledHSlider.gd" type="Script" id=1]



[node name="LabeledHSlider" type="HSlider"]
margin_right = 401.0
margin_bottom = 16.0
value = 100.0
rounded = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_LabeledHSlider_gui_input"]
[connection signal="value_changed" from="." to="." method="_on_LabeledHSlider_value_changed"]
